[gd_scene load_steps=5 format=3 uid="uid://bfe2atjcmt605"]

[ext_resource type="Script" uid="uid://dpfordpnms0sa" path="res://quest/ui/QuestRewardUI.gd" id="1_0m5yx"]
[ext_resource type="Script" uid="uid://jm3yoj5s1wvc" path="res://items/ui/ItemDropArea.gd" id="1_o6fn8"]
[ext_resource type="Texture2D" uid="uid://bg87pigjk72d3" path="res://assets/icons/resources/coins.png" id="2_0m5yx"]
[ext_resource type="Script" uid="uid://muut3gmsg30f" path="res://items/ui/ItemsDisplayContainer.gd" id="4_yis78"]

[node name="QuestRewardUI" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m5yx")

[node name="CenterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="RewardUIContainer" type="VBoxContainer" parent="CenterMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_o6fn8")

[node name="HintLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer"]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
size_flags_vertical = 1
text = "Take your rewards"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HintMarginContainer" type="MarginContainer" parent="CenterMarginContainer/RewardUIContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ItemsLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
text = "Items"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsDisplayContainer" type="GridContainer" parent="CenterMarginContainer/RewardUIContainer/ScrollContainer" node_paths=PackedStringArray("item_display_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 5
script = ExtResource("4_yis78")
item_display_container = NodePath(".")

[node name="CoinsRewardDisplay" type="HBoxContainer" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
alignment = 1

[node name="CoinsRewardLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer/CoinsRewardDisplay"]
unique_name_in_owner = true
layout_mode = 2
text = "+4"

[node name="TextureRect" type="TextureRect" parent="CenterMarginContainer/RewardUIContainer/CoinsRewardDisplay"]
layout_mode = 2
texture = ExtResource("2_0m5yx")

[node name="TakeRewardsButton" type="Button" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
text = "Take Rewards"

[node name="AbandonQuestButton" type="Button" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
text = "Back"

[node name="Label" type="Label" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
text = "Returned Items"
horizontal_alignment = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnedItemsDisplay" type="GridContainer" parent="CenterMarginContainer/RewardUIContainer/ScrollContainer2" node_paths=PackedStringArray("item_display_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
script = ExtResource("4_yis78")
item_display_container = NodePath(".")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LootLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Loot"

[node name="LootContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 6
script = ExtResource("4_yis78")
drop_enabled = false

[connection signal="pressed" from="CenterMarginContainer/RewardUIContainer/TakeRewardsButton" to="." method="_on_take_rewards_button_pressed"]
[connection signal="pressed" from="CenterMarginContainer/RewardUIContainer/AbandonQuestButton" to="." method="_on_abandon_quest_button_pressed"]
